; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hz_4t_4x2_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hz_4t_4x2_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*)* @hevc_hz_4t_4x2_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hz_4t_4x2_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %22 = load i64, i64* @ff_hevc_mask_arr, align 8
  %23 = add nsw i64 %22, 16
  %24 = call i64 @LD_SB(i64 %23)
  store i64 %24, i64* %21, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 -1
  store i32* %26, i32** %6, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = call i32 @LD_SH(i32* %27)
  store i32 %28, i32* %19, align 4
  %29 = load i32, i32* %19, align 4
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %12, align 4
  %32 = call i32 @SPLATI_H2_SH(i32 %29, i32 0, i32 1, i32 %30, i32 %31)
  %33 = load i64, i64* %21, align 8
  %34 = add nsw i64 %33, 2
  store i64 %34, i64* %15, align 8
  %35 = call i32 @__msa_ldi_h(i32 128)
  store i32 %35, i32* %20, align 4
  %36 = load i32, i32* %20, align 4
  %37 = shl i32 %36, 6
  store i32 %37, i32* %20, align 4
  %38 = load i32*, i32** %6, align 8
  %39 = load i32, i32* %7, align 4
  %40 = load i64, i64* %13, align 8
  %41 = load i64, i64* %14, align 8
  %42 = call i32 @LD_SB2(i32* %38, i32 %39, i64 %40, i64 %41)
  %43 = load i64, i64* %13, align 8
  %44 = load i64, i64* %14, align 8
  %45 = call i32 @XORI_B2_128_SB(i64 %43, i64 %44)
  %46 = load i64, i64* %13, align 8
  %47 = load i64, i64* %14, align 8
  %48 = load i64, i64* %13, align 8
  %49 = load i64, i64* %14, align 8
  %50 = load i64, i64* %21, align 8
  %51 = load i64, i64* %15, align 8
  %52 = load i64, i64* %16, align 8
  %53 = load i64, i64* %17, align 8
  %54 = call i32 @VSHF_B2_SB(i64 %46, i64 %47, i64 %48, i64 %49, i64 %50, i64 %51, i64 %52, i64 %53)
  %55 = load i32, i32* %20, align 4
  store i32 %55, i32* %18, align 4
  %56 = load i64, i64* %16, align 8
  %57 = load i64, i64* %17, align 8
  %58 = load i32, i32* %11, align 4
  %59 = load i32, i32* %12, align 4
  %60 = load i32, i32* %18, align 4
  %61 = load i32, i32* %18, align 4
  %62 = call i32 @DPADD_SB2_SH(i64 %56, i64 %57, i32 %58, i32 %59, i32 %60, i32 %61)
  %63 = load i32, i32* %18, align 4
  %64 = load i32*, i32** %8, align 8
  %65 = load i32, i32* %9, align 4
  %66 = call i32 @ST_D2(i32 %63, i32 0, i32 1, i32* %64, i32 %65)
  ret void
}

declare dso_local i64 @LD_SB(i64) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_ldi_h(i32) #1

declare dso_local i32 @LD_SB2(i32*, i32, i64, i64) #1

declare dso_local i32 @XORI_B2_128_SB(i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @DPADD_SB2_SH(i64, i64, i32, i32, i32, i32) #1

declare dso_local i32 @ST_D2(i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
